--- a/index.html
+++ b/index.html
@@ -11,29 +11,33 @@
 <body>
 <div id="mainbox">
   <header>
-    <img id="backgroundimag-top" src="images/Pop-upBarCo.top.jpg" alt="Pop-upBar Co.">
-    <svg id="logo" width="155px" height="26px" viewBox="0 0 155 26" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-      <g id="Pop-upBar-Co.-Var.2" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-          <g id="Mobile" transform="translate(-21.000000, -19.000000)" fill="#FFFFFF">
-              <g id="Pop-upBar-Co.-logo" transform="translate(19.000000, 14.000000)">
-                  <g id="ロゴ">
-                      <g id="見出し">
-                          <text id="Pop-upBar-Co" opacity="0.756812686" font-family="Helvetica" font-size="24" font-weight="normal">
-                              <tspan x="0" y="23">Pop-upBar Co</tspan>
-                          </text>
-                          <text id="ShareHouseProject" opacity="0.76297433" font-family="Helvetica" font-size="7" font-weight="normal">
-                              <tspan x="96" y="29">ShareHouseProject</tspan>
-                          </text>
-                          <g id="マメ" transform="translate(154.000000, 20.000000)" fill-rule="nonzero">
-                              <path d="M1.24693063,1.66765443 C1.38323156,1.3567472 1.53681195,1.05666861 1.68780376,0.75256962 C1.7736073,0.570186373 1.86981854,0.394366135 1.97758501,0.224147364 C1.97768509,0.223992485 1.97778516,0.223831152 1.97789191,0.223663366 C2.03710909,0.129277358 1.97081333,0.00789073003 1.85685561,0.00154067996 C1.21670158,-0.0341460852 0.468093905,0.554808152 0.149564702,1.28134035 C-0.169791781,2.00975047 0.0480762164,2.6371793 0.558500851,2.97459669 C0.642436338,3.03008219 0.757995243,2.99047827 0.788077519,2.896544 C0.828961126,2.76889766 0.871992991,2.63894105 0.911021892,2.52433039 C1.02082987,2.23679057 1.12305223,1.9502123 1.24693063,1.66765443 Z" id="Path"></path>
-                              <path d="M2.79434245,2.09163856 C3.13876217,1.37289955 3.04879201,0.452672089 2.5378612,0.0381741141 C2.44805675,-0.0346823003 2.30299355,0.00167896088 2.26981669,0.105419813 C2.26726629,0.113408707 2.26540032,0.119268079 2.26446373,0.122462361 C2.2087439,0.313405207 2.1398686,0.500248405 2.05789546,0.684464768 C1.92718369,0.997051749 1.80163756,1.30865048 1.65443462,1.61581802 C1.52065371,1.89497661 1.36739176,2.16202754 1.21906491,2.43493783 C1.15859009,2.53674044 1.08945543,2.65091212 1.02021991,2.76277576 C0.96749716,2.84796299 1.02266945,2.95450283 1.13019704,2.97393631 C1.78359021,3.09203549 2.44978583,2.81065811 2.79434245,2.09163856 Z" id="Path"></path>
-                          </g>
-                      </g>
-                  </g>
-              </g>
-          </g>
-      </g>
-    </svg>
+    <img id="backgroundimag-top" src="images/Pop-upBarCo.top.jpg" alt="Pop-upBar Co."> 
+<svg width="87px" height="43px" viewBox="0 0 87 43" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+    <defs>
+        <radialGradient cx="0%" cy="0%" fx="0%" fy="0%" r="194.613074%" gradientTransform="translate(0.000000,0.000000),scale(0.399757,1.000000),rotate(16.641391),translate(-0.000000,-0.000000)" id="radialGradient-1">
+            <stop stop-color="#77726E" offset="0%"></stop>
+            <stop stop-color="#F9E6D6" offset="100%"></stop>
+        </radialGradient>
+    </defs>
+    <g id="Pop-upBar-Co.-Var.2" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+        <g id="Mobile" transform="translate(-103.000000, -277.000000)">
+            <g id="about-us" transform="translate(0.000000, 240.000000)">
+                <g id="aboutus" transform="translate(103.000000, 37.000000)">
+                    <g id="door">
+                        <g id="ドア">
+                            <path d="M0,0 L9.65090106,3.26784961 L9.65090106,25.1384615 L0,21.8307692 L0,0 Z M7.56922315,12.5939053 C7.40148664,12.5939053 7.23609996,12.7311675 7.23609996,12.8726032 L7.23609996,12.8726032 L7.23609996,14.4881503 C7.23609996,14.633983 7.41250244,14.7571896 7.56922315,14.7571896 C7.72594387,14.7571896 7.90495063,14.633983 7.90495063,14.4881503 L7.90495063,14.4881503 L7.90495063,13.8859943 C7.92806984,13.8382677 7.95241137,13.7858709 7.97797521,13.7288038 C8.24658452,13.1291771 8.66855813,12.9494992 8.97074429,12.8096733 C9.27293045,12.6698474 8.91759605,12.7085563 8.72763336,12.7311675 C8.60099157,12.7462417 8.32676399,12.8536189 7.90495063,13.0532992 L7.90495063,13.0532992 L7.90495063,12.8726032 C7.90495063,12.7311675 7.74329076,12.5939053 7.56922315,12.5939053 Z" id="Combined-Shape" fill="#4B4B4B"></path>
+                            <polygon id="Path-10" fill="#535251" points="1.4692021 2.84217094e-14 3.48811601 0.697285679 13.4743944 0.697285679 13.4743944 21.1697947 10.1555883 21.1697947 10.1555883 21.8642893 14.1714286 21.8642893 14.1714286 2.84217094e-14"></polygon>
+                            <polygon id="影" fill="url(#radialGradient-1)" points="10.1569228 22.3531004 10.1569228 25.3479674 61.8021247 42.9986103 61.8021247 22.3531004"></polygon>
+                        </g>
+                    </g>
+                    <text id="about-us" font-family="Helvetica" font-size="16" font-weight="normal" fill="#4B4B4B">
+                        <tspan x="25.3085938" y="18">about us</tspan>
+                    </text>
+                </g>
+            </g>
+        </g>
+    </g>
+</svg>
     <nav>
       <svg width="17px" height="13px" viewBox="0 0 17 13" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
           <g id="Pop-upBar-Co.-Var.2" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" stroke-linecap="round" stroke-linejoin="round">
