--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
     </svg>
     <article class="honbun">
       <p>私たちが場所をお借りしている<br>
-      OPEN DOOR CAFFEEには, <br>
+      OPEN DOOR COFFEEには, <br>
       OPEN DOOR APARTMENTという<br>
       シェアハウスが併設されています.<br>
       私たちは, そこで生活を共にし, Barを企画したり<br>
