--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
               </g>
           </g>
       </svg>
-      <a href=""><p><svg width="48px" height="2px" viewBox="0 0 24 1" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+      <a href="menu.html"><p><svg width="48px" height="2px" viewBox="0 0 24 1" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
           <g id="Pop-upBar-Co.-Var.2" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" stroke-linecap="round" stroke-linejoin="round">
               <g id="Mobile" transform="translate(-148.000000, -733.000000)" stroke="#4B4B4B">
                   <g id="menu" transform="translate(0.000000, 698.000000)">
@@ -258,7 +258,7 @@
     </svg>
     <article class="honbun">
       <p>私たちが場所をお借りしている<br>
-      OPEN DOOR COFFEEには, <br>
+      OPEN DOOR CAFFEEには, <br>
       OPEN DOOR APARTMENTという<br>
       シェアハウスが併設されています.<br>
       私たちは, そこで生活を共にし, Barを企画したり<br>
