--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@
          </g>
      </svg>
      <article>
+      <p>コロナウイルスの影響により次回未定</p>
       <p>2019&nbsp;&nbsp;11/1(Fri)&nbsp;&nbsp;19:00-23:00</p>
       <p>2019&nbsp;&nbsp;12/6(Fri)&nbsp;&nbsp;19:00-23:00</p>
       <p><svg width="5px" height="5px" viewBox="0 0 5 5" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
