--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <li><a href="http://nav.cx/2HtMLes">contact</a></li>
       </ul>
       <ul class="charbase">
-      	<li>次回　コロナウイルスの影響により未定</li>
+      	<li>コロナウイルスの影響により次回未定</li>
         <li><a href="https://www.google.com/maps/place/%E3%80%92606-8253+%E4%BA%AC%E9%83%BD%E5%BA%9C%E4%BA%AC%E9%83%BD%E5%B8%82%E5%B7%A6%E4%BA%AC%E5%8C%BA%E5%8C%97%E7%99%BD%E5%B7%9D%E7%80%AC%E3%83%8E%E5%86%85%E7%94%BA%EF%BC%92%EF%BC%98%E2%88%92%EF%BC%91/@35.0364876,135.7885061,17z/data=!3m1!4b1!4m5!3m4!1s0x600109acdac72fd3:0xc9f3800a6369810d!8m2!3d35.0364876!4d135.7906948">京都市左京区北白川瀬ノ内町28-1</a></li>
         <li><a href="http://nav.cx/2HtMLes">LineID  @889nxegt</a></li>
       </ul>
