--- a/index.html
+++ b/index.html
@@ -177,6 +177,7 @@
      </svg>
      <article>
       <p>コロナウイルスの影響により次回未定</p>
+      <p>営業時間19:00~23:00</p>
       <p><svg width="5px" height="5px" viewBox="0 0 5 5" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
           <g id="Pop-upBar-Co.-Var.2" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
               <g id="Mobile" transform="translate(-158.000000, -639.000000)" fill="#4B4B4B">
